<resources>
    <string name="app_name">SprintShare</string>
    <string name="sprint_share_header">SPRINT\nSHARE</string>
    <string name="login_header">Login</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="first_name_hint_plain">First Name</string>
    <string name="last_name_hint_plain">Last Name</string>
    <string name="email_hint_plain">Email Address</string>
    <string name="password_hint_field">Password</string>
    <string name="retype_password_hint_field">Re-enter Password</string>
    <string name="current_password_hint_field">Current Password</string>
    <string name="new_password_hint_field">New Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="username_hint_forgot_password">Username</string>
    <string name="login_button">SIGN IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="update_button">UPDATE</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="send_reset_link_button">Send Reset Link</string>
    <string name="or_text">OR</string>
    <string name="select_status">Select Status</string>
    <string name="profile_name">Nero Martinez</string>
    <string name="profile_welcome">Welcome to SprintShare !</string>
    <string name="profile_settings">Account Settings</string>
    <string name="profile_logout">Logout</string>
    <string name="change_account_info">Change Account Info</string>
    <string name="change_password">Change Password</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="title_voting_list">Voting List</string>
    <string name="label_polls">POLLS</string>
    <string name="cd_back">Back</string>
    <string name="cd_add_poll">Add Poll</string>
    <string name="cd_filter">Filter</string>
    <string name="title_agenda">Agenda</string>
    <string name="cd_calendar">Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>