<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AccountSettingsActivity">

    <!-- Top bar (white theme) -->
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Section title: Change Account Info -->

    <!-- First Name -->

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="12dp"
        android:text="@string/change_account_info"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_box"
        android:hint="@string/first_name_hint_plain"
        android:inputType="textPersonName"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Last Name -->
    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_box"
        android:hint="@string/last_name_hint_plain"
        android:inputType="textPersonName"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/editTextText4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email -->
    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_box"
        android:hint="@string/email_hint_plain"
        android:inputType="textEmailAddress"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/editTextText5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Update Button (Account Info) -->
    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="96dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/update_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText6" />

    <!-- Section title: Change Password -->

    <!-- Current Password -->
    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:paddingVertical="12dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_box"
        android:hint="@string/current_password_hint_field"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- New Password -->
    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_box"
        android:hint="@string/new_password_hint_field"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Retype Password -->
    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_box"
        android:hint="@string/retype_password_hint_field"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Update Button (Password) -->

    <!-- Bottom bar (white) -->
    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="96dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/update_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword5"
        app:layout_constraintVertical_bias="0.12" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Back option -->
    <TextView
        android:id="@+id/backOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:focusable="true"
        android:text="Back"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
